# testc-cpp

./: CMakeLists.txt  MyAtoi.cpp  README.md
make/: Makefile  divi.c  main.c  myMath.h  plus.c
temp/: hello.txt  write.txt
testc/: baseType.c  struct.c  testdefine.c  testenum.c  teststruct.c  testtypedef.c  testunion.c
testc++/: testaliastemplate.cpp  testauto.cpp  testmove.cpp  testrightvalue.cpp  testtypenameandclass.cpp
testc++/algo/link/: checkCircle.cpp  deleteKFromEnd.cpp  findFirstNodeCircle.cpp  findKFromEnd.cpp  findMidNode.cpp  link.h  mergeTwoOrderLink.cpp  reOrderLink.cpp  reverse.cpp
testc++/dongnao/: test&.cpp  testSTL.cpp  testexception.cpp  testfile.cpp  testnamespace.cpp  testtemplateclass.cpp  testtypecast.cpp
testc++/dongnao/testclass/: Student.cpp  Student.h  Teacher.cpp  Teacher.h  testclass.cpp
testc++/string/: String.cpp  String.h  testString.cpp
testc++/testusing/: testUsingBaseFile.cpp  testUsingalias.cpp
testc++/xiangxueketang/: main.cpp  testallpurevirtualfun.cpp  testcallback.cpp  testclassinit.cpp  testclassinitanddeleteorder.cpp  testextends.cpp  testfriendclass.cpp  testfriendfun.cpp  testoperation.cpp  testpthread.cpp  testpthreadargs.cpp  testpthreadmoreargs.cpp  teststatic.cpp  testtemplatefun.cpp  testthreadlock.cpp  testvirtualextends.cpp  testvirtualfun.cpp  textpurevirtualfun.cpp
testc/file/: basefile.h  testfile.c  testmmap.c
testc/poitor/: arr.h  pointor.c  poitorfun.c  testmalloc.c
testc/testpthread/: testpthread.c  testpthreadcondition.c  testpthreaddetach.c  testpthreadmutex.c
(+30 files in other folders)
